# rag-psychology-system

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  prompt.txt  reset.ps1  start.ps1
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  main.py  schemas.py
backend/app/services/: __init__.py  chunker.py  document_loader.py  embeddings.py  ingestion.py  llm.py  rag.py  security.py  settings_store.py  vector_store.py
backend/tests/: test_api.py  test_chunker.py  test_document_loader.py  test_security.py
docs/: api.md  architecture.md  troubleshooting.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatPanel.test.tsx  ChatPanel.tsx  DocumentStats.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  ui.tsx
frontend/src/lib/: api.ts
sample-data/: cbt-notes.txt  memory-notes.txt
